<resources>

    <string name="app_name">"RPG Combat Assistant"</string>
    <string name="loading">"Loading"</string>
    <string name="menu_settings">"Settings"</string>

    <string name="mainTitle">"RPG Combat Assistant"</string>
    <!-- Common elements -->
    <string name="errorMustBeANumber">"Must be numeric"</string>
    <string name="errorMandatory">"Mandatory"</string>
    <string name="fumble">"Fumble!"</string>
    <string name="noEffect">"Without effect"</string>
    <string name="system">"System: %s"</string>

    <!-- MainActivity -->
    <string name="main_menu_players_title">"Players"</string>
    <string name="main_menu_players_pc">"Player Characters"</string>
    <string name="main_menu_players_npc">"Non Player Characters"</string>
    <string name="main_menu_players_all">"All Players"</string>
    <string name="main_menu_attack_title">"Attack"</string>
    <string name="main_menu_attack_start">"Start Attack"</string>
    <string name="main_menu_attack_critical">"Start Critical"</string>
    <string name="main_menu_other_title">"Other"</string>
    <string name="main_menu_other_mm">"Movement Maneuver"</string>

    <!-- Splash screen Activity -->
    <string name="splash_main">"RPG Combat Assistant"</string>
    <string name="splash_progress_reading">"Reading files"</string>
    <string name="splash_progress_reading_zip">"Reading zip file"</string>
    <string name="splash_progress_unzip">"Unpacking file"</string>
    <string name="splash_progress_unzipped">"Uncompressed file"</string>
    <string name="splash_progress_critical">"Critical Reading"</string>
    <string name="splash_progress_critical_table">"Reading critical tables"</string>
    <string name="splash_progress_attack">"Reading attacks"</string>
    <string name="splash_progress_attack_table">"Reading tables attack"</string>
    <string name="splash_progress_moving_maneuver">"Reading MM"</string>

    <!-- RPGCharacter List Activity -->
    <string name="characterList_playerCharactersGroupHeader">"Player Characters"</string>
    <string name="characterList_nonPlayerCharactersGroupHeader">"Non-player characters"</string>

    <!-- RPGCharacter Activity -->
    <string name="character_title">"Character"</string>
    <string name="character_name">"%1$s (%2$s)"</string>
    <string name="character_name_npc">"%1$s (PNJ)"</string>
    <string name="character_hit_points">"%1$d / %2$d"</string>
    <string name="character_playerName">"Player"</string>
    <string name="menu_character_edit">"Edit"</string>
    <string name="menu_character_delete">"Delete"</string>
    <string name="character_deleteDialog_title">"Delete character"</string>
    <string name="character_deleteDialog_message">"Are you sure you want to delete this character?"</string>
    <string name="character_deleteDialog_ok">"Yes, delete"</string>
    <string name="character_deleteDialog_cancel">"No"</string>
    
    <!-- RPGCharacter Edit Activity -->
    <string name="characterEdit_title">"Character Edition"</string>
    <string name="characterEdit_name">"Name"</string>
    <string name="characterEdit_nameHint">"Character"</string>
    <string name="characterEdit_playerName">"PC"</string>
    <string name="characterEdit_playerPnj">"NPC"</string>
    <string name="characterEdit_playerNameHint">"Player"</string>
    <string name="characterEdit_maxHitPoints">"PV (total)"</string>
    <string name="characterEdit_maxHitPointsHint">"PVT"</string>
    <string name="characterEdit_hitPoints">"PV (present)"</string>
    <string name="characterEdit_hitPointsHint">"PV"</string>
    <string name="characterEdit_armorType">"Armor"</string>
    <string name="characterEdit_cancelButton">"Cancel"</string>
    <string name="characterEdit_saveButton">"Save"</string>
    <string name="characterEdit_addAttackButton">"Add"</string>

    <!-- Attack Activity -->
    <string name="menu_attack_title">"Attack"</string>
    <string name="attack_name">"Name"</string>
    <string name="attack_attackType">"Type"</string>
    <string name="attack_extra">"Extra"</string>
    <string name="attack_defender">"Defender"</string>
    <string name="attack_defenderArmorType">"Armor"</string>
    <string name="attack_roll">"Roll"</string>
    <string name="attack_cancelButton">"Cancel"</string>
    <string name="attack_goButton">"Attack"</string>
    <string name="attack_applyResultButton">"Apply"</string>
    <string name="attack_critical">"Critical of %1$s level %2$s"</string>
    <string name="attack_goToCriticalButton">"Throwing critical"</string>
    <string name="menu_attack_edit">"Edit"</string>
    <string name="menu_attack_delete">"Delete"</string>
    <string name="attack_deleteDialog_title">"Remove attack"</string>
    <string name="attack_deleteDialog_message">"Are you sure you want to delete this attack?"</string>
    <string name="attack_deleteDialog_ok">"Yes, delete"</string>
    <string name="attack_deleteDialog_cancel">"No"</string>
    
    <!-- Attack Edit Activity -->
    <string name="attackEdit_title">"Editing attack"</string>
    <string name="attackEdit_name">"Name"</string>
    <string name="attackEdit_attackType">"Type"</string>
    <string name="attackEdit_bonus">"Bonus"</string>
    <string name="attackEdit_cancelButton">"Cancel"</string>
    <string name="attackEdit_saveButton">"Apply Changes"</string>
    
    <!-- Critical Activity -->
    <string name="critical_title">"Critical"</string>
    <string name="critical_type">"Type"</string>
    <string name="critical_level">"Level"</string>
    <string name="critical_roll">"Roll"</string>
    <string name="critical_cancelButton">"Cancel"</string>
    <string name="critical_goButton">"Calculate"</string>

    <!-- Moving Activity -->
    <string name="moving_roll">"Roll"</string>
    <string name="moving_cancelButton">"Cancel"</string>
    <string name="moving_fumble">"Fumble"</string>
    <string name="moving_difficultyLabel">"Difficulty"</string>
    <string name="moving_rollHint">"Roll"</string>
    <string name="moving_bonusHint">"Bonus"</string>

    <!-- Armors -->
    <string name="armor_merp_1">"No Armor"</string>
    <string name="armor_merp_5">"Soft Leather"</string>
    <string name="armor_merp_10">"Rigid Leather"</string>
    <string name="armor_merp_15">"Cain Mail"</string>
    <string name="armor_merp_20">"Plate"</string>
    <string name="armor_rm_1">"TP1: Skin"</string>
    <string name="armor_rm_2">"TP2: Robes"</string>
    <string name="armor_rm_3">"TP3: Light Hide"</string>
    <string name="armor_rm_4">"TP4: Heavy Hide"</string>
    <string name="armor_rm_5">"TP5: Leather Jerkin"</string>
    <string name="armor_rm_6">"TP6: Leather Coat"</string>
    <string name="armor_rm_7">"TP7: Reinforced Leather Coat"</string>
    <string name="armor_rm_8">"TP8: Reinforced Fill-Length Leather Coat"</string>
    <string name="armor_rm_9">"TP9: Leather Breastplate"</string>
    <string name="armor_rm_10">"TP10: Leather Breastplate and Greaves"</string>
    <string name="armor_rm_11">"TP11: Halsf-Hide Plate"</string>
    <string name="armor_rm_12">"TP12: Fill-Hide Plate"</string>
    <string name="armor_rm_13">"TP13: Chain Shirt"</string>
    <string name="armor_rm_14">"TP14: Chain Shirt and Greaves"</string>
    <string name="armor_rm_15">"TP15: Full Chain"</string>
    <string name="armor_rm_16">"TP16: Chain Hauberk"</string>
    <string name="armor_rm_17">"TP17: Metal Breastplate"</string>
    <string name="armor_rm_18">"TP18: Metal Breastplate and Greaves"</string>
    <string name="armor_rm_19">"TP19: Half Plate"</string>
    <string name="armor_rm_20">"TP20: Full Plate"</string>

    <string name="maneuver_diff_routine">"Routine"</string>
    <string name="maneuver_diff_easy">"Easy"</string>
    <string name="maneuver_diff_light">"Light"</string>
    <string name="maneuver_diff_medium">"Medium"</string>
    <string name="maneuver_diff_very_hard">"Hard"</string>
    <string name="maneuver_diff_extremely_hard">"Very hard"</string>
    <string name="maneuver_diff_sheer_hard">"Extremely hard"</string>
    <string name="maneuver_diff_folly">"Sheer Folly"</string>
    <string name="maneuver_diff_absurd">"Absurd"</string>


    <string name="characterEdit_humanPlayer">"Human Player?"</string>
    <string name="pref_system_dialog">"Select a game system"</string>
    <string name="pref_system_title">"Current System"</string>
    <string name="pref_system_summary">"Choose the game system"</string>
    <string name="pref_system_manage_title">"Manage systems"</string>
    <string name="pref_system_manage_summary">"Press to edit the systems"</string>
    <string name="weapons_title">"Weapons"</string>
    <string name="no_characters">"No characters available"</string>
    <string name="no_attacks">"The selected character don't have weapons"</string>

    <string name="empty_folder">"Folder doesn't have subdirectories or zip files"</string>
    <string name="go_up">"Go up"</string>
    <string name="folder_inaccessible">"The folder is inaccesible"</string>
    <string name="parent_folder_inaccessible">"The parent folder is inaccesible"</string>
    <string name="file_inaccesible">"Can't read the file"</string>
    <string name="sdcard_inaccesible">"Can't access to sdcard"</string>
    <string name="dialog_delete_system_title">Remove system?</string>
    <string name="dialog_delete_system_message">Press ok to delete the rulesystem. The players attack associated will be deleted too</string>
</resources>