<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <!-- Type -->
    <TextView
        android:id="@+id/critical_typeLabel"
        style="@style/common_form_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/critical_type" />
    <Spinner
        android:id="@+id/critical_type"
        style="@style/common_form_input"
        android:layout_alignBaseline="@+id/critical_typeLabel"
        android:layout_toRightOf="@+id/critical_typeLabel" />

    <!-- Level -->
    <TextView
        android:id="@+id/critical_levelLabel"
        style="@style/common_form_label"
        android:layout_below="@+id/critical_typeLabel"
        android:text="@string/critical_level" />
    <Spinner
        android:id="@+id/critical_level"
        style="@style/common_form_input"
        android:layout_alignBaseline="@+id/critical_levelLabel"
        android:layout_toRightOf="@+id/critical_levelLabel" />
    
    <!-- Roll -->
    <TextView
        android:id="@+id/critical_rollLabel"
        style="@style/common_form_label"
        android:layout_below="@+id/critical_levelLabel"
        android:text="@string/critical_roll" />
    <EditText
        android:id="@+id/critical_roll"
        style="@style/common_form_input"
        android:layout_alignBaseline="@+id/critical_rollLabel"
        android:layout_toRightOf="@+id/critical_rollLabel"
        android:inputType="numberSigned" />
    
    <!-- Buttons -->
    <Button
        android:id="@+id/critical_cancelButton"
        style="@style/common_form_label"
        android:layout_below="@+id/critical_rollLabel"
        android:text="@string/critical_cancelButton" />
    <Button
        android:id="@+id/critical_goButton"
        style="@style/common_form_input"
        android:layout_alignBaseline="@+id/critical_cancelButton"
        android:layout_toRightOf="@+id/critical_cancelButton"
        android:text="@string/critical_goButton" />
    
    <!-- Result area -->
    <TextView
        android:id="@+id/critical_result"
        style="@style/common_form_fullRow"
        android:layout_below="@+id/critical_cancelButton" />
</RelativeLayout>
