<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/attackEdit_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher"
            android:layout_margin="10dp"
            android:inputType="textPersonName|textNoSuggestions"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"/>

        <EditText
            android:id="@+id/attackEdit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/attackEdit_name"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/attackEdit_icon"/>

        <EditText
            android:id="@+id/attackEdit_bonus"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/attackEdit_bonus"
            android:layout_below="@+id/attackEdit_name"
            android:layout_toRightOf="@+id/attackEdit_icon"
            android:inputType="numberSigned"/>

        <Spinner
            android:id="@+id/attackEdit_attackType"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/attackEdit_bonus"
            android:inputType="textPersonName"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/attackEdit_cancelButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/attackEdit_cancelButton"/>

        <Button
            android:id="@+id/attackEdit_saveButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/attackEdit_saveButton"/>

    </LinearLayout>

</LinearLayout>
